--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
   },
   "dependencies": {
     "@mdx-js/react": "^3.0",
-    "@olinfo/quizms": "^2.0.0-beta.3",
-    "@olinfo/react-components": "^0.7",
+    "@olinfo/quizms": "^3.0.0-beta.0",
+    "@olinfo/quizms-mdx": "^3.0.0-beta.0",
+    "@olinfo/react-components": "^0.10",
     "@olinfo/tailwind": "^0.1",
     "@types/d3-shape": "^3.1.6",
     "@types/lodash-es": "^4.17",
-    "@types/react": "^18",
+    "@types/react": "^19",
     "autoprefixer": "^10.4",
     "clsx": "^2.1",
     "d3-shape": "^3.2.0",
-    "date-fns": "^3.6",
+    "date-fns": "^4.1",
     "lodash-es": "^4.17",
     "postcss": "^8.4",
-    "react": "^18.2",
-    "react-dom": "^18.2",
-    "wouter": "^3.1.3"
+    "react": "^19.0",
+    "react-dom": "^19.0",
+    "react-server-dom-webpack": "^19.0",
+    "webpack": "^5.98",
+    "wouter": "^3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8"
