--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           cname: scolastiche.olinfo.it
-          publish_dir: ./dist
+          publish_dir: ./.quizms/hosting-build
