--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash-es": "^4.17",
     "@types/react": "^19",
     "autoprefixer": "^10.4",
+    "blockly": "^12.0.0",
     "clsx": "^2.1",
     "d3-shape": "^3.2.0",
     "date-fns": "^4.1",
