--- a/biome.json
+++ b/biome.json
@@ -1,13 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "files": {
-    "include": ["src"],
-    "ignore": ["src/asy_library"]
-  },
-  "vcs": {
-    "enabled": true,
-    "clientKind": "git",
-    "useIgnoreFile": true
+    "includes": ["src/**", "!src/asy_library"]
   },
   "formatter": {
     "indentStyle": "space",
@@ -17,30 +11,40 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "a11y": {
+        "useKeyWithClickEvents": "off",
+        "useSemanticElements": "off"
+      },
       "correctness": {
         "noConstantMathMinMaxClamp": "error",
         "noUndeclaredVariables": "error",
         "noUnusedImports": "error",
         "noUnusedPrivateClassMembers": "error",
         "noUnusedVariables": "error",
-        "useHookAtTopLevel": "error"
+        "useHookAtTopLevel": "error",
+        "useUniqueElementIds": "off"
+      },
+      "nursery": {
+        "noFloatingPromises": "error",
+        "noImportCycles": "error"
+      },
+      "performance": {
+        "noImgElement": "off"
+      },
+      "security": {
+        "noDangerouslySetInnerHtml": "off"
       },
       "style": {
+        "noHeadElement": "off",
+        "noInferrableTypes": "error",
         "noNegationElse": "error",
         "noNonNullAssertion": "off",
-        "useNamingConvention": {
-          "level": "error",
-          "options": {
-            "conventions": [
-              {
-                "selector": {
-                  "kind": "objectLiteralMember"
-                },
-                "formats": ["camelCase", "PascalCase"]
-              }
-            ]
-          }
-        },
+        "noParameterAssign": "error",
+        "noUnusedTemplateLiteral": "error",
+        "noUselessElse": "error",
+        "useAsConstAssertion": "error",
+        "useConsistentArrayType": { "level": "error", "options": { "syntax": "shorthand" } },
+        "useDefaultParameterLast": "error",
         "useFilenamingConvention": {
           "level": "error",
           "options": {
@@ -49,12 +53,15 @@
           }
         },
         "useFragmentSyntax": "error",
-        "useShorthandArrayType": "error",
-        "useShorthandAssign": "error"
+        "useNumberNamespace": "error",
+        "useSelfClosingElements": "error",
+        "useShorthandAssign": "error",
+        "useSingleVarDeclarator": "error"
       },
       "suspicious": {
         "noArrayIndexKey": "off",
         "noExplicitAny": "off",
+        "noConfusingVoidType": "off",
         "useAwait": "error"
       }
     }
@@ -65,8 +72,36 @@
     }
   },
   "css": {
-    "parser": {
-      "cssModules": true
+    "assist": {
+      "enabled": false
+    },
+    "formatter": {
+      "enabled": false
+    },
+    "linter": {
+      "enabled": false
+    }
+  },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": {
+          "level": "on",
+          "options": {
+            "groups": [
+              ":NODE:",
+              ":BLANK_LINE:",
+              ["next", "next/**", "react", "react/**", "react-dom", "react-dom/**"],
+              ":BLANK_LINE:",
+              ":PACKAGE:",
+              ":BLANK_LINE:",
+              ":ALIAS:",
+              ":BLANK_LINE:",
+              ":PATH:"
+            ]
+          }
+        }
+      }
     }
   }
 }
