--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "wouter": "^3.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8",
+    "@biomejs/biome": "=2.2.3",
     "typescript": "^5.8.3"
   },
   "postcss": {
